--- a/index.html
+++ b/index.html
@@ -7,45 +7,48 @@
   <style>
     body {
       font-family: 'Comic Sans MS', cursive, sans-serif;
-      background-color: #E1EEBC;
-      color: #333;
+      background-color: #FFEBB7; /* Light yellow background like a cat's fur */
+      color: #4E4B3D; /* Dark brown text color for contrast */
       padding: 20px;
     }
     .quiz-container {
       max-width: 600px;
       margin: 0 auto;
-      background: white;
+      background: #FFF4E1; /* Soft orange background */
       border-radius: 10px;
       padding: 20px;
-      box-shadow: 0 0 10px #ccc;
+      box-shadow: 0 0 15px #FFA500; /* Orange shadow for a cat-like vibe */
     }
     h1 {
       text-align: center;
-      color: #ff66b2;
+      color: #FF8C00; /* Bright orange color */
     }
     .question {
       margin-bottom: 15px;
+      font-size: 18px;
+      color: #FF6F00; /* Dark orange for question text */
     }
     button {
-      background-color: #E1EEBC;
+      background-color: #FFB74D; /* Light orange for buttons */
       border: none;
       padding: 10px 20px;
       cursor: pointer;
       font-size: 16px;
       border-radius: 5px;
       margin-top: 10px; 
+      transition: background-color 0.3s ease;
     }
     button:hover {
-      background-color: #ff99cc;
+      background-color: #FF9800; /* Bright orange on hover */
     }
     .result {
       font-weight: bold;
-      color: green;
+      color: #FF5722; /* Bold red-orange for the result text */
       margin-top: 15px;
     }
     img {
-      max-width: 300px;
-      border-radius: 100px;
+      max-width: 250px;
+      border-radius: 10px;
       display: block;
       margin-left: auto;
       margin-right: auto;
@@ -105,3 +108,5 @@
 </body>
 </html>
 
+ 
+    
